<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.MainActivity">

    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp" app:srcCompat="@drawable/welcomescreenbg"
            android:id="@+id/bg"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:scaleType="centerCrop"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintVertical_bias="0.0"
            android:contentDescription="@string/_1"/>
    <ImageView
            android:layout_width="88dp"
            android:layout_height="29dp" app:srcCompat="@drawable/swooshlogo"
            android:id="@+id/sooshlogo"
            android:scaleType="fitCenter" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="@+id/bg" android:layout_marginEnd="8dp"
            android:contentDescription="@string/_2"/>
    <TextView
            android:text="@string/go_all_in"
            android:layout_width="227dp"
            android:layout_height="0dp"
            android:id="@+id/main" android:textColor="@android:color/white"
            android:fontFamily="@font/montserrat" android:textSize="40sp"
            app:layout_constraintTop_toBottomOf="@+id/sooshlogo" android:layout_marginTop="168dp"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:textStyle="bold"/>
    <TextView
            android:text="@string/going_all_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/mian2" android:fontFamily="@font/montserrat"
            android:textColor="@android:color/white" android:textSize="24sp"
            app:layout_constraintTop_toBottomOf="@+id/main" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.494"
            android:textStyle="bold"/>
    <TextView
            android:text="@string/find_a_team_in_our_city_and_dominate_your_league"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/main3" android:singleLine="false"
            android:textSize="18sp" android:textColor="@android:color/white" android:textAlignment="center"
            android:layout_marginTop="68dp" app:layout_constraintTop_toBottomOf="@+id/mian2"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:fontFamily="@font/montserrat"/>
    <Button
            android:text="@string/get_started"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/getStartedBtn" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/bg" android:textColor="@android:color/white"
            android:textSize="30sp" android:fontFamily="@font/montserrat" android:background="@drawable/swooshbutton"
            android:layout_marginBottom="8dp"/>

</android.support.constraint.ConstraintLayout>