<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".skillActivity">

    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp" app:srcCompat="@drawable/beginnerballerbg"
            android:id="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:scaleType="centerCrop" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="1.0" android:contentDescription="@string/background_img"/>
    <Button
            android:text="@string/finish"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/gs3" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView" android:textColor="@android:color/white"
            android:textSize="30sp" android:fontFamily="@font/montserrat" android:background="@drawable/swooshbutton"
            android:layout_marginBottom="8dp"
            app:layout_constraintHorizontal_bias="1.0"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
            app:layout_constraintVertical_bias="1.0"/>
    <ImageView
            android:layout_width="88dp"
            android:layout_height="29dp" app:srcCompat="@drawable/swooshlogo"
            android:id="@+id/sooshlogo"
            android:scaleType="fitCenter" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="8dp" android:layout_marginEnd="8dp"
            android:contentDescription="@string/_2" app:layout_constraintTop_toTopOf="parent"/>
    <TextView
            android:text="@string/i_am_a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/i_am" android:textColor="@android:color/white"
            android:fontFamily="@font/montserrat" android:textSize="24sp"
            app:layout_constraintTop_toBottomOf="@+id/sooshlogo" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="100dp"
            app:layout_constraintHorizontal_bias="0.498"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            android:layout_marginTop="50dp" app:layout_constraintTop_toBottomOf="@+id/i_am"
            android:id="@+id/linearLayout2">
        <ToggleButton
                android:text="@string/beginner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/toggleButton" android:layout_weight="1"
                android:background="@drawable/swooshbuttotoggle" android:fontFamily="@font/montserrat"
                android:textColor="@android:color/white" android:textSize="18sp" android:textOff="@string/beginner"
                android:textOn="@string/beginner" android:layout_marginEnd="16dp"/>
        <ToggleButton
                android:text="@string/baller"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/toggleButton2" android:layout_weight="1"
                android:background="@drawable/swooshbuttotoggle" android:fontFamily="@font/montserrat"
                android:textColor="@android:color/white" android:textSize="18sp" android:textOff="@string/baller"
                android:textOn="@string/baller" android:layout_marginStart="16dp"/>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>